tests/ok/meta-function-token-stream-return.ari
meta fn double_expr(input: token_stream) -> token_stream {
  return tokens!((input) * 2);
}

meta fn append_generated(input: token_stream) -> token_stream {
  return tokens!(input fn generated() -> i64 {
    return 5;
  });
}

meta fn some_payload(input: token_stream) -> token_stream {
  return tokens!(Some(input));
}

append_generated!(fn base() -> i64 {
  return 10;
});

enum MaybeI64 {
  None,
  Some(i64),
}

fn score(value: MaybeI64) -> i64 {
  return match value {
    some_payload!(inner) => {
      inner
    }
    None => {
      3
    }
  };
}

fn main() -> i64 {
  return double_expr!(3 + 4) + base() + generated() + score(Some(8)) + score(None());
}
